親ディレクトリへ遷移するボタンを追加

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -9,6 +9,13 @@
 
     <nav class="navbar">
         <ul class="menu">
+            <li>
+{{ if .Page.Parent }}
+                <a href="{{ .Page.Parent.Permalink }}">↑</a>
+{{ else }}
+                <span>↑</span>
+{{ end }}
+            </li>
             <li><a class="footerLink" href="{{ .Site.BaseURL }}">Home</a></li>
             {{ range .Site.Menus.header }}
             <li>
