--- a/assets/scss/components/header.scss
+++ b/assets/scss/components/header.scss
@@ -40,18 +40,18 @@ header {
 }
 
 .navbar {
-    background-color: $darkGrey;
     width: 100%;
     position: fixed;
     top: 0;
     left: 0;
-    padding: 10px 20px;
+    padding: 0px 0px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     z-index: 100;
     height: 10px;
 }
 
 .menu {
+    background-color: $darkGrey;
     list-style-type: none;
     padding: 0;
     margin: 0;
@@ -60,7 +60,11 @@ header {
 }
 
 .menu > li {
-    margin: 0 10px;
+    padding: 5px 15px;
+}
+
+.menu > li:hover {
+    background-color: $backgroundDark;
 }
 
 .menu > li > a {
