--- a/assets/scss/utils/variables.scss
+++ b/assets/scss/utils/variables.scss
@@ -1,6 +1,7 @@
 // Colors
 $darkGrey: #323232;
 $white: #f8f8ff;
+$gray: #808080;
 $black: #2f2f2f;
 $blue: #3366cc;
 
@@ -13,3 +14,11 @@ $fontCode: 'Fira Mono', monospace;
 // Content
 $breakLarge: 992px;
 $width: 760px;
+
+// text
+$link: cornflowerblue;
+$linkVisited: cornflowerblue; 
+$linkHover: cornflowerblue;
+$linkActive: cornflowerblue;
+$pathColor: cornflowerblue;
+$hostColor: aquamarine;
