--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,3 +1,4 @@
+@import "./components/cite_table";
 @import "./components/footer";
 @import "./components/header";
 @import "./pages/single";
@@ -16,12 +17,11 @@ body {
 }
 
 .host {
-    color: aquamarine;
+    color: $hostColor;
 }
 
 .path {
-    color: cornflowerblue;
-
+    color: $pathColor;
 }
 
 .scroll {
@@ -74,5 +74,10 @@ pre code {
 code {
   font-family: $fontCode;
   font-size: 75%;
+}
+
+a {
+    text-decoration: none;
+    color: $link;
 }
 
