asin 対応とパラメタが未定義の場合の保護コードを追加

--- a/assets/scss/components/header.scss
+++ b/assets/scss/components/header.scss
@@ -59,8 +59,12 @@ header {
     align-items: center;
 }
 
-.menu > li.enable:hover {
+.menu > li:hover {
     background-color: $backgroundDark;
+}
+
+.menu > li.disable:hover {
+    background-color: $darkGrey;
 }
 
 .menu > li > a {
