--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -14,7 +14,7 @@
                 <a href="{{ .Page.Parent.Permalink }}">↑</a>
             </li>
 {{ else }}
-            <li>
+            <li class="disable">
                 <span>↑</span>
             </li>
 {{ end }}
