--- a/assets/scss/utils/variables.scss
+++ b/assets/scss/utils/variables.scss
@@ -15,6 +15,10 @@ $fontCode: 'Fira Mono', monospace;
 $breakLarge: 992px;
 $width: 760px;
 
+// break point
+$smartPhoneWidth: 390px;
+$tabletWidth: 749px;
+
 // text
 $link: cornflowerblue;
 $linkVisited: cornflowerblue; 
