--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,6 +3,8 @@
 
 {{ hugo.Generator }}
 
+<link rel="icon" href="{{ .Site.Params.faviconPath }}" type="image/x-icon">
+
 <!-- Permalink & RSSlink -->
 <link rel="canonical" href="{{ .Permalink }}">
 {{- with .OutputFormats.Get "RSS" }}
