--- a/assets/scss/components/footer.scss
+++ b/assets/scss/components/footer.scss
@@ -6,6 +6,37 @@ footer.vimfooter {
     bottom: 0;
     width: 100%;
     background: $backgroundDarker;
+    display:flex;
+}
+
+footer.vimfooter > div {
+    text-align: left;
+    white-space: nowrap;
+    width: 100%;
+    display: flex;
+}
+
+footer.vimfooter>div>span.fileName {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    display: inline-block;
+}
+
+footer.vimfooter>div>span.permission {
+    display: inline-block;
+    width: fit-content;
+    white-space: nowrap;
+}
+
+footer.vimfooter>div>span.fileSize {
+    display: inline-block;
+    flex: 1;
+    white-space: nowrap;
+}
+
+footer.vimfooter > div > span:not(:last-child) {
+    padding-right: 1ch;
 }
 
 .footer {
