menu_parser を追加

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="footerInput">
         <a class="footerLink" href="{{ .Site.BaseURL }}">
-                <span class="host">{{ .Site.Params.user }}@{{ .Site.Params.hostname }}</span>:<span class="path">{{ .Site.Params.basePath }}{{ strings.TrimRight "/" (replace .Permalink .Site.BaseURL "") }}</span>#
+                <span class="host">{{ .Site.Params.screen.user }}@{{ .Site.Params.hostname }}</span>:<span class="path">{{ .Site.Params.basePath }}{{ strings.TrimRight "/" (replace .Permalink .Site.BaseURL "") }}</span>#
             </span>
         </a>
     </div>
