--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,25 +7,24 @@
         });
     </script>
 
+    {{ $baseURL := .Site.BaseURL }}
+    {{ $Site := .Site }}
+
+
     <nav class="navbar">
         <ul class="menu">
 {{ if .Page.Parent }}
-            <li class="enable">
-                <a href="{{ .Page.Parent.Permalink }}">↑</a>
-            </li>
+            <li class="enable"><a href="{{ .Page.Parent.Permalink }}">↑</a></li>
 {{ else }}
-            <li class="disable">
-                <span>↑</span>
-            </li>
+            <li class="disable"><span>↑</span></li>
 {{ end }}
             <li><a class="footerLink" href="{{ .Site.BaseURL }}">home</a></li>
-            {{ $baseURL := .Site.BaseURL }}
-            {{ range sort .Site.Params.social "name"}}
-            {{ if .isDirectory | default false }}
-            <li>
-                <a href="{{ $baseURL }}{{ .name | safeURL }}/" {{ if .rel }} rel="{{ .rel }}" {{ end }} class="directory">{{ .name }}</a>
-            </li>
-            {{ end }}
+            {{ range sort .Site.Params.screen.menu "name" }}
+                {{ if .onTop | default true }}
+                    <li>
+                        <a href="{{ $baseURL }}{{ .name | safeURL }}/" class="directory">{{ .name }}</a>
+                    </li>
+                {{ end }}
             {{ end }}
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle">help</a>
