--- a/layouts/partials/main.html
+++ b/layouts/partials/main.html
@@ -1,5 +1,3 @@
 <main class="main">
-    {{ if isset .Site.Params "social" }}
-    {{ partial "social.html" . }}
-    {{ end }}
+    {{ partial "menu.html" . }}
 </main>
